# OrthoFinder

./: .gitignore  CONTRIBUTING.md  README.md  blosum.py  custom.sh  default.sh  orthogroups.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  tox.ini
.github/workflows/: tests.yml
ExampleData/OrthoFinder/Results_Jan29/: Log.txt
ExampleData/OrthoFinder/Results_Jan29_1/: Log.txt
ExampleData/OrthoFinder/Results_Jan29_2/: Log.txt
ExampleData/OrthoFinder/Results_Jan29_3/: Log.txt
ExampleData/OrthoFinder/Results_Jan29_4/: Log.txt
ExampleData/OrthoFinder/Results_Jan29_5/: Log.txt
ExampleData/OrthoFinder/Results_Jan29_5/Comparative_Genomics_Statistics/: Statistics_Overall.tsv
ExampleData/OrthoFinder/Results_Jan29_5/Gene_Duplication_Events/: Duplications.tsv  SpeciesTree_Gene_Duplications_0.5_Support.txt
ExampleData/OrthoFinder/Results_Jan29_5/Gene_Trees/: OG0000000_tree.txt  OG0000001_tree.txt  OG0000002_tree.txt  OG0000003_tree.txt  OG0000004_tree.txt  OG0000005_tree.txt  OG0000006_tree.txt  OG0000007_tree.txt  OG0000008_tree.txt  OG0000009_tree.txt  OG0000010_tree.txt  OG0000011_tree.txt  OG0000012_tree.txt  OG0000013_tree.txt  OG0000014_tree.txt  OG0000015_tree.txt  OG0000016_tree.txt  OG0000017_tree.txt  OG0000018_tree.txt  OG0000019_tree.txt  OG0000020_tree.txt  OG0000021_tree.txt  OG0000022_tree.txt  OG0000023_tree.txt  OG0000024_tree.txt  OG0000025_tree.txt  OG0000026_tree.txt  OG0000027_tree.txt  OG0000029_tree.txt  OG0000030_tree.txt  OG0000031_tree.txt  OG0000032_tree.txt  OG0000033_tree.txt  OG0000034_tree.txt  OG0000035_tree.txt  OG0000036_tree.txt  OG0000037_tree.txt  OG0000039_tree.txt  OG0000040_tree.txt  OG0000041_tree.txt  (+211 more)
ExampleData/OrthoFinder/Results_Jan29_5/Orthologues/: Mycoplasma_agalactiae.tsv  Mycoplasma_gallisepticum.tsv  Mycoplasma_genitalium.tsv  Mycoplasma_hyopneumoniae.tsv
ExampleData/OrthoFinder/Results_Jan30/: Log.txt
ExampleData/OrthoFinder/Results_Jan30_1/: Log.txt
dev_tools/: orthogroups_compare.py
fungal_dataset/: Amphiamblys_sp_wsbs2006.ASM187567v1.pep.all.fa  Anncaliia_algerae_pra109.Annc_alge_PRA109_V4.pep.all.fa  Anthracocystis_flocculosa_pf_1.Pflocc_1.0.pep.all.fa  Babjeviella_inositovora_nrrl_y_12698.Babin1.pep.all.fa  Blumeria_graminis_f_sp_tritici_96224.Bgt_454_newbler_assembly.pep.all.fa  Brettanomyces_bruxellensis_awri1499.AWRI1499_v1.0.pep.all.fa  Candida_arabinofermentans_nrrl_yb_2248.Canar1.pep.all.fa  Candida_tanzawaensis_nrrl_y_17324.Canta1.pep.all.fa  Ceratocystis_platani.ASM97888v1.pep.all.fa  Coniophora_puteana_rwd_64_598_ss2.Conpu1.pep.all.fa  Cyberlindnera_jadinii_nrrl_y_1542.Cybja1.pep.all.fa  Debaryomyces_hansenii_cbs767.ASM644v2.pep.all.fa  Drechslerella_stenobrocha_248.DREv1.pep.all.fa  Edhazardia_aedis_usnm_41457.Edha_aedis_V4b.pep.all.fa  Encephalitozoon_cuniculi_ecuniii_l.ECIIIL.pep.all.fa  Enterocytozoon_bieneusi_h348.ASM20948v1.pep.all.fa  Enterospora_canceri.ASM208791v1.pep.all.fa  Eremothecium_sinecaudum.ASM154855v1.pep.all.fa  Fomitiporia_mediterranea_mf3_22.Fomme1.pep.all.fa  Hanseniaspora_uvarum_dsm_2768.Huva2.0.pep.all.fa  Hepatospora_eriocheir_gca_002087885.ASM208788v1.pep.all.fa  Hyphopichia_burtonii_nrrl_y_1933.Hypbu1.pep.all.fa  Kazachstania_africana_cbs_2517.Ka_CBS2517.pep.all.fa  Kluyveromyces_marxianus_dmku3_1042.Kmar_1.0.pep.all.fa  Komagataella_phaffii.ASM170808v1.pep.all.fa  Kuraishia_capsulata_cbs_1993.AUH_PRJEB4427_v1.pep.all.fa  Lachancea_nothofagi_cbs_11611.LANO0.pep.all.fa  Leucoagaricus_sp_symc_cos.ASM156373v1.pep.all.fa  Lodderomyces_elongisporus_nrrl_yb_4239.ASM14968v1.pep.all.fa  Malassezia_sympodialis_atcc_42132.ASM34930v2.pep.all.fa  Metschnikowia_bicuspidata_var_bicuspidata_nrrl_yb_4993.Metbi1.pep.all.fa  Meyerozyma_guilliermondii_atcc_6260.ASM14942v1.pep.all.fa  Mitosporidium_daphniae.UGP1.0.pep.all.fa  Moesziomyces_antarcticus.ASM74776v1.pep.all.fa  Mortierella_verticillata_nrrl_6337.Mort_vert_NRRL_6337_V1.pep.all.fa  Nadsonia_fulvescens_var_elongata_dsm_6958.Nadfu1.pep.all.fa  Naumovozyma_castellii_cbs_4309.ASM23734v1.pep.all.fa  Neolecta_irregularis_dah_3.NeoIirr1.0.pep.all.fa  Nosema_ceranae_brl01.ASM18298v1.pep.all.fa  Ordospora_colligata_oc4.ASM80326v1.pep.all.fa  (+27 more)
fungi_dataset16/: Nematocida_sp_1_ertm6.Nema_sp_1_ERTm6_V2.pep.all.fa  Schizosaccharomyces_japonicus.GCA_000149845.2.pep.all.fa
myanalysis/: Proteomes16.txt  create_datadir.sh  custom.sh  default.sh  fungi_output.sh  orthogroups.py  orthogroups_compare.py  orthologues.py  otest.py  parse_flags.py  usage_options.ini
scoring_matrix/: ALTS910101.txt  CROG050101.txt  DAYM780302.txt  HENS920101.txt  HENS920102.txt  HENS920103.txt  HENS920104.txt  JOND920103.txt  LEVJ860101.txt  MUET020101.txt  MUET020102.txt  NGPC000101.txt  OVEJ920101.txt  WEIL970101.txt
src/orthofinder/: __init__.py  __main__.py  _version.py  citation.py  files.py  notes.py  orthologues.py  parallel_task_manager.py  program_caller.py  resolve.py  stag.py  stride.py  tree.py  trees2ologs_dlcpar.py  trees2ologs_of.py  trees_msa.py  util.py  wrapper_phyldog.py
src/orthofinder/comparative_genomics/: helpinfo.py  orthologues.py  stats.py
src/orthofinder/configfiles/: config.json
src/orthofinder/dev_tools/: decorators.py  questions.py
src/orthofinder/gen_tree_inference/: orthologues.py  resolve.py  trees2ologs_dlcpar.py  trees2ologs_of.py  trees_msa.py
src/orthofinder/gene_tree_inference/: resolve.py  trees2ologs_of.py
src/orthofinder/orthogroups/: accelerate.py  gathering.py  orthogroups_set.py  sample_genes.py
src/orthofinder/run/: __main__.py  check_dependencies.py  config.json  helpinfo.py  process_args.py  run_commands.py  run_info.py  species_info.py
src/orthofinder/test_sequences/: longer.txt  shorter.txt
src/orthofinder/tools/: dendroblast.py  mcl.py  stag.py  stride.py  waterfall.py  wrapper_phyldog.py
src/orthofinder/utils/: fasta_processor.py  files.py  parallel_task_manager.py  program_caller.py  util.py
tests/test_reconfig/: benchmark_compare.py  conftest.py  test_orthogroups.py  test_orthologues.py  test_setup_method.py  test_unassigned_gens.py
(+3521 files in other folders)
